--- a/component-library-project/src/Components/Forms/Input.css
+++ b/component-library-project/src/Components/Forms/Input.css
@@ -4,17 +4,17 @@ label {
   font-size: 12px;
 }
 .input-small {
-  margin-top: 3px;
-  padding: 3px 2px;
+  padding: 3px 10px;
   width: 180px;
+  border: 1px solid lightgrey;
 }
 .input-medium {
-  margin-top: 3px;
-  padding: 6px 2px;
+  padding: 7px 10px;
   width: 180px;
+  border: 1px solid lightgrey;
 }
 .input-large {
-  margin-top: 3px;
-  padding: 10px 2px;
+  padding: 11px 10px;
   width: 180px;
+  border: 1px solid lightgrey;
 }
