--- a/component-library-project/src/Components/Buttons/Button.css
+++ b/component-library-project/src/Components/Buttons/Button.css
@@ -1,69 +1,118 @@
-button {
+/* button {
+  display: block;
   border-radius: 2px;
-  padding: 10px 25px;
-}
+  padding: 10px 5px;
+} */
 
 .primary {
+  display: block;
+  border-radius: 2px;
+  padding: 10px 5px;
   background-color: #0069d9;
   color: white;
   border: #0069d9;
 }
 .primary-hover {
-  background-color: #76b2e6;
+  display: block;
+  border-radius: 2px;
+  padding: 10px 5px;
+  background-color: #9bc8f0;
   border: #76b2e6;
   color: #0069d9;
 }
+
+.primary-hover:hover {
+  border: 1px solid blue;
+}
 .primary-outline {
+  display: block;
+  border-radius: 2px;
+  padding: 10px 5px;
   background-color: white;
   color: #2e90e5;
   border: 2px solid #0069d9;
 }
 
 .success {
+  display: block;
+  border-radius: 2px;
+  padding: 10px 5px;
   background-color: green;
   color: white;
   border: green;
 }
 .success-hover {
+  display: block;
+  border-radius: 2px;
+  padding: 10px 5px;
   border: 2px solid lightgreen;
   background: lightgreen;
   color: green;
 }
+.success-hover:hover {
+  border: 1px solid blue;
+}
 .success-outline {
+  display: block;
+  border-radius: 2px;
+  padding: 10px 5px;
   background-color: white;
   color: green;
   border: 2px solid green;
 }
 
 .danger {
+  display: block;
+  border-radius: 2px;
+  padding: 10px 5px;
   background-color: red;
   color: white;
   border: red;
 }
 .danger-hover {
+  display: block;
+  border-radius: 2px;
+  padding: 10px 5px;
   border: 2px solid lightpink;
   background-color: lightpink;
   color: red;
 }
+.danger-hover:hover {
+  border: 1px solid blue;
+}
 .danger-outline {
+  display: block;
+  border-radius: 2px;
+  padding: 10px 5px;
   border: 2px solid red;
   background-color: white;
   color: red;
 }
 
 .warning {
+  display: block;
+  border-radius: 2px;
+  padding: 10px 5px;
   background-color: yellow;
   color: white;
   border: yellow;
 }
 .warning-hover {
+  display: block;
+  border-radius: 2px;
+  padding: 10px 5px;
   border: 2px solid lightyellow;
   color: yellow;
   background-color: lightyellow;
 }
+.warning-hover:hover {
+  border: 1px solid blue;
+}
 .warning-outline {
+  display: block;
+  border-radius: 2px;
+  padding: 10px 5px;
   border: 2px solid yellow;
   color: yellow;
   background-color: white;
 }
-
