--- a/component-library-project/src/Components/InputButtons/InputButton.css
+++ b/component-library-project/src/Components/InputButtons/InputButton.css
@@ -1,10 +1,14 @@
-.button-medium {
+.form-frame {
+  display: inline-block;
+}
+
+.list-button-medium {
   background-color: #33a0ff;
   padding: 8px 13px;
   color: white;
 }
 
-.button-large {
+.list-button-large {
   background-color: #33a0ff;
   padding: 12px 18px;
   color: white;
